--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ span.weight-300 {
         border-width: 0px !important;
     }
     .title {
-        display: none;
+        font-size: 2rem;
     }
     #svgHeader {
         display: block !important;
